--- a/src/content-script/Todo/App.css
+++ b/src/content-script/Todo/App.css
@@ -31,3 +31,9 @@
     overflow-x: hidden;
 
 }
+#flex-row{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
