--- a/src/content-script/Todo/App.css
+++ b/src/content-script/Todo/App.css
@@ -1,4 +1,12 @@
-#root-container{
+@font-face {
+	font-family: "Pretendard-Regular";
+	src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
+		format("woff");
+	font-weight: 400;
+	font-style: normal;
+}
+
+/* #root-container{
     position: fixed;
     right: 10px;
     bottom: 10px;
@@ -7,7 +15,7 @@
     height: 57.6px;
     perspective: 1000px;
     cursor: pointer;
-}
+} */
 #assignment-area{
     display: block;
     position: fixed;
